# TelegramBot-parser

./: README.md  data.py  model.py  model_news.py  pyproject.toml  telegram_bot.py  urls_consts.py
