[tool.poetry]
name = "новая папка"
version = "0.1.0"
description = "TelegramBot"
authors = ["Marina Kondratyk <kondratsiuk.marina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.9.1"
requests = "2.31.0"
pandas = "2.0.2"
pytelegrambotapi = "4.12.0"
beautifulsoup4 = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
